--- a/register.css
+++ b/register.css
@@ -2,6 +2,7 @@ h2{
   margin-top: 50px;
   text-align: center;
 }
+
 h3{
   text-align: center;
 }
@@ -11,18 +12,17 @@ h3{
   padding: 20px 20px 0;
   text-align: center;
 }
+
 table{
-	margin-left:auto; 
-    margin-right:auto;
-	text-align: center;
+   margin-left:auto; 
+   margin-right:auto;
+   text-align: center;
 }
+
+td {
+   text-align: right;
+  }
 
 #button{
-	margin-left : 75px;
-	padding : 0px;
-	
-}
-
-td.label{
-	text-align : right;
+   margin-left : 63px;	
 }
